# optimaps-indoor-positioning

./: README.md  pyproject.toml
data/: AP_crd.csv  filtered_data.csv  raw_data.csv  test_data.csv
notebooks/: 1.data_cleaning.ipynb  2.test_set.ipynb  3.tools_set.ipynb  4.pairwise_distances.ipynb  5.graphics.ipynb  6.statistical_analysis.ipynb  7.room_level_analysis.ipynb
output/: average_error_by_room.csv  cv_pairwise_distances_chebyshev.csv  cv_pairwise_distances_euclidean.csv  cv_pairwise_distances_seuclidean.csv  error_by_room_ordered_by_nn.csv  label_room_mapping.csv  mean_pairwise_distances_chebyshev.csv  mean_pairwise_distances_euclidean.csv  mean_pairwise_distances_seuclidean.csv  nn_error_by_label.csv  nn_results_by_device.csv  nn_results_by_params.csv  optimal_parameters_by_algorithm.csv  optimized_device_stats.csv  optimized_results_by_device.csv  optimized_results_by_params.csv  optimized_results_by_params_alpha_6_7.csv  slsqp_error_by_label.csv  top3_alphas_per_rho0.csv
utils/: tools.py
