[project]
name = "thesis"
version = "0.1.0"
description = "Site Survey-free Indoor Positioning System based on RSSI Diversity and Sequential Least Squares Programming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyswarms>=1.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
